# pyflowreg

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakeLists_old.txt  README.md  experiments.py  pyproject.toml  requirements.txt  requirements_win.txt  setup.py
.github/workflows/: pypi-release.yml  readme-normalize.yml  test.yml
benchmarks/synth/: evaluation.py  preprocessing.py  requirements.txt
benchmarks/synth/methods/: __init__.py  antspyx.py  elastix.py  jnormcorre.py  normcorre.py  pyflowreg.py  suite2p.py
docs/: changelog.md  conf.py  index.md  installation.md  quickstart.md  references.bib  troubleshooting.md
docs/api/: core.md  index.md  io.md  motion_correction.md  session.md  utilities.md  z_align.md
docs/snippets/index/: getting_started.py
docs/snippets/quickstart/: array_workflow.py  file_workflow.py  key_parameters.py  multi_session.py  parallel_processing.py
docs/theory/: data_terms.md  index.md  parameters.md
docs/user_guide/: 3d_volumes.md  backends.md  configuration.md  examples_gallery.md  file_formats.md  index.md  multi_session.md  online_processing.md  parallelization.md  prealignment.md  workflows.md  z_align.md
examples/: injection_session_demo.py  jupiter_demo_arr.py  session_config.toml  session_config.yml  session_config_example.toml  session_config_example.yaml  synth_evaluation.py  synth_example_diso.py  z_align_config.toml  z_shift_demo.py
pyflowreg/: __init__.py  optical_flow.py  runtime_context.py
pyflowreg/core/: OF_options.py  level_solver.cpp  level_solver.py  lib.rs  optical_flow.py
pyflowreg/examples/: jupiter_demo.py  synth_evaluation.py  synth_example.py
pyflowreg/motion_correction/: OF_options.py  compensate_arr.py  compensate_live.py  compensate_recording.py  flow_reg_live.py
pyflowreg/motion_correction/parallelization/: base.py  multiprocessing.py  sequential.py  threading.py
pyflowreg/src/: CMakeLists.txt  __init__.py  level_solver.cpp  level_solver.py
pyflowreg/util/: image_processing.py  resize_util.py  visualization.py
pyflowreg/util/io/: _arr.py  _base.py  base.py  factory.py  hdf5.py  mat.py  mdf.py  multifile_wrappers.py  tiff.py
src/pyflowreg/: __init__.py  _runtime.py
src/pyflowreg/core/: __init__.py  backend_registry.py  diso.py  diso_optical_flow.py  level_solver.py  optical_flow.py  warping.py
src/pyflowreg/motion_correction/: OF_options.py  __init__.py  compensate_arr.py  compensate_recording.py  flow_reg_live.py
src/pyflowreg/session/: config.py  stage1_compensate.py  stage2_between_avgs.py  stage3_valid_mask.py
src/pyflowreg/util/: download.py  image_processing.py  resize_util.py  superresolution_helpers.py  visualization.py  xcorr_prealignment.py
src/pyflowreg/z_align/: __init__.py  cli.py  config.py  pipeline.py
tests/: conftest.py
tests/core/: test_backend_registry.py  test_diso_optical_flow.py  test_level_solver_gnc.py  test_optical_flow.py  test_optical_flow_dataterm.py  test_warping.py
tests/docs/: conftest.py  test_docstring_mirrors.py  test_index.py  test_quickstart.py  test_readme.py  test_session_examples.py  test_snippet_coverage.py
tests/docs/api/: test_motion_correction.py  test_session.py
tests/docs/theory/: test_data_terms.py  test_parameters.py
tests/docs/user_guide/: test_3d_volumes.py  (+9 more)
tests/examples/: test_example_scripts.py
tests/motion_correction/: test_OF_options.py  test_compensate_arr.py  test_compensate_recording.py  test_flow_reg_live.py  test_parallelization.py
tests/session/: test_config.py  test_session_integration.py  test_stage2_between_avgs.py
tests/util/: test_visualization.py  test_xcorr_prealignment.py
tests/z_align/: __init__.py  test_cli.py  test_config.py  test_pipeline.py  test_pipeline_parallel.py
(+74 files in other folders)
